root-app/disabled/infra/traefik-gateway2.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.networking.k8s.io/v1","kind":"Gateway","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"traefik-traefik","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"traefik","argocd.argoproj.io/instance":"traefik","helm.sh/chart":"traefik-30.1.0"},"name":"traefik-gateway","namespace":"traefik"},"spec":{"gatewayClassName":"traefik","listeners":[{"name":"web","port":8000,"protocol":"HTTP"}]}}
  creationTimestamp: "2025-12-15T17:05:35Z"
  generation: 6
  labels:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    argocd.argoproj.io/instance: traefik
    helm.sh/chart: traefik-30.1.0
  name: traefik-gateway
  namespace: traefik
  resourceVersion: "425416"
  uid: cdb01a63-ec6c-4299-9469-28c0d6323139
spec:
  gatewayClassName: traefik
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: web
    port: 8000
    protocol: HTTP
status:
  conditions:
  - lastTransitionTime: "2025-12-15T17:05:50Z"
    message: Gateway successfully scheduled
    observedGeneration: 6
    reason: Accepted
    status: "True"
    type: Accepted
  - lastTransitionTime: "2025-12-15T17:05:50Z"
    message: Gateway successfully scheduled
    observedGeneration: 6
    reason: Programmed
    status: "True"
    type: Programmed
  listeners:
  - attachedRoutes: 0
    conditions:
    - lastTransitionTime: "2025-12-15T17:05:50Z"
      message: No error found
      observedGeneration: 6
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-12-15T17:05:50Z"
      message: No error found
      observedGeneration: 6
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2025-12-15T17:05:50Z"
      message: No error found
      observedGeneration: 6
      reason: Programmed
      status: "True"
      type: Programmed
    name: web
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
